# templateless-rust

./: .env.sample  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: tests.yml
examples/: confirm-email.rs  confirm_email.rs  feedback.rs  qr_code.rs  simple.rs  verification.rs
src/: collection.rs  content.rs  email.rs  email_address.rs  email_wrapper.rs  errors.rs  lib.rs  template.rs  templateless.rs  utils.rs
src/components/: button.rs  image.rs  link.rs  list.rs  mod.rs  otp.rs  qr_code.rs  signature.rs  socials.rs  store_badges.rs  text.rs  view_in_browser.rs
