[package]
name = "templateless"
description = "Ship faster by sending elegant emails using just code"
repository = "https://github.com/templateless/templateless-rust"
documentation = "https://docs.rs/templateless"
homepage = "https://templateless.com/"
version = "0.1.0-alpha.8"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["email", "templates"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
reqwest = { version = "0.12.3", features = ["rustls-tls", "json"] }
tokio = { version = "1.37.0", features = ["full"] }
erased-serde = "0.4.4"
dotenvy = "0.15.7"
exitcode = "1.1.2"
console = "0.15.8"
base64 = "0.22.0"
derive_more = "0.99.17"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "verification"
path = "examples/verification.rs"

[[example]]
name = "qr_code"
path = "examples/qr_code.rs"

[[example]]
name = "feedback"
path = "examples/feedback.rs"
