[package]
name = "templateless"
description = "Ship faster by sending elegant emails using just code"
repository = "https://github.com/templateless/templateless-rust"
documentation = "https://docs.rs/templateless"
homepage = "https://templateless.com/"
version = "0.1.0-alpha.8"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["email", "templates"]

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
erased-serde = "0.4.5"
dotenvy = "0.15.7"
exitcode = "1.1.2"
console = "0.15.8"
base64 = "0.22.1"
derive_more = "0.99.18"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "verification"
path = "examples/verification.rs"

[[example]]
name = "qr_code"
path = "examples/qr_code.rs"

[[example]]
name = "feedback"
path = "examples/feedback.rs"
